setup cucumber